--- a/annotating_aphasiabank_data.ipynb
+++ b/annotating_aphasiabank_data.ipynb
@@ -196,8 +196,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "2501fabc-3a80-4d8e-82bd-6f62da6288b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Person</th>\n",
+       "      <th>Text</th>\n",
+       "      <th>mor</th>\n",
+       "      <th>gra</th>\n",
+       "      <th>hesitations</th>\n",
+       "      <th>corrections</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>seconds</th>\n",
+       "      <th>Clean_text</th>\n",
+       "      <th>num_corrections</th>\n",
+       "      <th>num_unintelligible</th>\n",
+       "      <th>xcomp</th>\n",
+       "      <th>ccomp</th>\n",
+       "      <th>prepositional</th>\n",
+       "      <th>optional_elements</th>\n",
+       "      <th>noun_modifiers</th>\n",
+       "      <th>negation</th>\n",
+       "      <th>determiner</th>\n",
+       "      <th>topicalization</th>\n",
+       "      <th>quantifier</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>*INV:</td>\n",
+       "      <td>so ‡ first we're just gonna do some talking .</td>\n",
+       "      <td>co|so beg|beg adv|first pro:sub|we~aux|be&amp;PRES...</td>\n",
+       "      <td>1|0|BEG 2|1|BEGP 3|7|JCT 4|7|SUBJ 5|7|AUX 6|7|...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0_5819</td>\n",
+       "      <td>5.819</td>\n",
+       "      <td>so  first we're just gonna do some talking</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>*PAR:</td>\n",
+       "      <td>+&lt; okay .</td>\n",
+       "      <td>co|okay .</td>\n",
+       "      <td>1|0|INCROOT 2|1|PUNCT</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5119_5778</td>\n",
+       "      <td>0.659</td>\n",
+       "      <td>okay</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>*INV:</td>\n",
+       "      <td>so ‡ okay .</td>\n",
+       "      <td>co|so beg|beg co|okay .</td>\n",
+       "      <td>1|0|BEG 2|1|BEGP 3|0|INCROOT 4|3|PUNCT</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5819_10856</td>\n",
+       "      <td>5.037</td>\n",
+       "      <td>so  okay</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>*INV:</td>\n",
+       "      <td>how do you think your speech is these days ?</td>\n",
+       "      <td>pro:int|how mod|do pro:per|you v|think det:pos...</td>\n",
+       "      <td>1|4|JCT 2|4|AUX 3|4|SUBJ 4|0|ROOT 5|6|DET 6|7|...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10856_15376</td>\n",
+       "      <td>4.52</td>\n",
+       "      <td>how do you think your speech is these days</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>*PAR:</td>\n",
+       "      <td>alright &amp;=ges . [+ gram]</td>\n",
+       "      <td>co|alright .</td>\n",
+       "      <td>1|0|INCROOT 2|1|PUNCT</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15376_16794</td>\n",
+       "      <td>1.418</td>\n",
+       "      <td>alright</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Person                                            Text  \\\n",
+       "0  *INV:  so ‡ first we're just gonna do some talking .    \n",
+       "1  *PAR:                                      +< okay .    \n",
+       "2  *INV:                                    so ‡ okay .    \n",
+       "3  *INV:   how do you think your speech is these days ?    \n",
+       "4  *PAR:                       alright &=ges . [+ gram]    \n",
+       "\n",
+       "                                                 mor  \\\n",
+       "0  co|so beg|beg adv|first pro:sub|we~aux|be&PRES...   \n",
+       "1                                          co|okay .   \n",
+       "2                            co|so beg|beg co|okay .   \n",
+       "3  pro:int|how mod|do pro:per|you v|think det:pos...   \n",
+       "4                                       co|alright .   \n",
+       "\n",
+       "                                                 gra hesitations corrections  \\\n",
+       "0  1|0|BEG 2|1|BEGP 3|7|JCT 4|7|SUBJ 5|7|AUX 6|7|...          []         NaN   \n",
+       "1                              1|0|INCROOT 2|1|PUNCT          []         NaN   \n",
+       "2             1|0|BEG 2|1|BEGP 3|0|INCROOT 4|3|PUNCT          []         NaN   \n",
+       "3  1|4|JCT 2|4|AUX 3|4|SUBJ 4|0|ROOT 5|6|DET 6|7|...          []         NaN   \n",
+       "4                              1|0|INCROOT 2|1|PUNCT          []         NaN   \n",
+       "\n",
+       "      duration seconds                                    Clean_text  \\\n",
+       "0       0_5819   5.819  so  first we're just gonna do some talking     \n",
+       "1    5119_5778   0.659                                        okay     \n",
+       "2   5819_10856   5.037                                    so  okay     \n",
+       "3  10856_15376    4.52  how do you think your speech is these days     \n",
+       "4  15376_16794   1.418                                     alright     \n",
+       "\n",
+       "   num_corrections  num_unintelligible  xcomp  ccomp  prepositional  \\\n",
+       "0                3                   0      0      1              0   \n",
+       "1                3                   0      0      0              0   \n",
+       "2                3                   0      0      0              0   \n",
+       "3                3                   0      0      1              0   \n",
+       "4                3                   0      0      0              0   \n",
+       "\n",
+       "   optional_elements  noun_modifiers  negation  determiner  topicalization  \\\n",
+       "0                  1               0         0           0               0   \n",
+       "1                  0               0         0           0               0   \n",
+       "2                  0               0         0           0               0   \n",
+       "3                  1               0         0           1               0   \n",
+       "4                  0               0         0           0               0   \n",
+       "\n",
+       "   quantifier  \n",
+       "0           1  \n",
+       "1           0  \n",
+       "2           0  \n",
+       "3           0  \n",
+       "4           0  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63f6bf45-7b25-4eab-a2bd-1df30ebb5ea9",
    "metadata": {},
    "outputs": [],
    "source": []
